# crewai_flow_researcher_agent

./: .gitignore  README.md  pyproject.toml  research.md
src/research_flow/: main.py
src/research_flow/crews/poem_crew/: poem_crew.py
src/research_flow/crews/poem_crew/config/: agents.yaml  tasks.yaml
